Bug 1593396: If the content of an embed or object element changes to be web content, recreate as an OuterDocAccessible. r=MarcoZ

If an embed or object doesn't specify a URL (or specifies a URL which isn't web content), it won't be created as an OuterDocAccessible.
For example, an embed with no src will be created as a generic HyperTextAccessible.
If the URL later changes to refer to web content, we must recreate as an OuterDocAccessible.
Previously, we didn't recreate, which was causing an assertion and may have caused other strange issues as well.

Differential Revision: https://phabricator.services.mozilla.com/D52292